# LinuxARC

./: DUAL_BOOT_GUIDE.txt  main.py  query  requirements.txt  setup.py  start_frida.py  start_mitm.py
.claude/: settings.local.json
analyzers/: loot_analyzer.py  pattern_detector.py  position_analyzer.py  threat_analyzer.py
core/: api_interceptor.py  entity_manager.py  memory_reader.py  packet_analyzer.py  packet_decoder.py  sniffer_engine.py
data/: jwt_token.json  jwt_token.txt  uc_page.html
hypervisor/: ArcRadar.cer  _build_comm.cmd  _build_comm2.cmd  _build_comm3.cmd  _build_log.txt  _build_now.cmd  build_all.cmd  sign_drivers.cmd
hypervisor/efi_loader/: Cargo.toml  TUTO_VM.txt  USAGE.txt  build.bat  create_iso.ps1  create_usb.bat  signatures_25h2.txt
hypervisor/efi_loader/src/: hook.rs  main.rs  mapper.rs  scanner.rs  winload.rs
hypervisor/efi_loader/tools/: dump_signatures.py  pdb_extract.py  quick_dump.bat
hypervisor/efi_loader/tools/_dump_temp/: winload.efi
overlay/: esp_overlay.py  radar_overlay.py  render_engine.py
tests/: test_decoder.py  test_sniffer.py
tools/: api_client.py  api_deep_fuzz.py  api_dump.py  api_fuzzer.py  api_probe_manifest.py  api_probe_manifest2.py  api_probe_post.py  api_probe_v2.py  api_probe_v3.py  build_proxy_dll.py  capture_match.py  capture_match_addon.py  diag_driver.py  enrich_assets.py  esp_v4.py  frida_bypass_ssl.js  frida_hook_ssl_rw.js  frida_ssl_dump.js  install_drivers_autostart.bat  load_comm_only.bat  load_drivers.bat  load_mapped.bat  memory_scanner.py  mitm_arc.py  mitm_capture.py  offset_finder.py  (+7 more)
(+53 files in other folders)
